# pastebox

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: main.yml
nginx/: pastebox.conf
src/accounts/: models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/accounts/templates/accounts/: profile.html
src/accounts/tests/: test_models.py  test_views.py
src/config/: settings.py  urls.py
src/snippets/: admin.py  forms.py  mixins.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
src/snippets/migrations/: 0001_initial.py  0002_alter_snippet_options.py
src/snippets/static/css/: syntax_highlight.css
src/snippets/templates/snippets/: index.html  snippet_detail.html  snippet_edit.html
src/snippets/templatetags/: snippets_filters.py
src/snippets/tests/: test_forms.py  test_models.py  test_utils.py  test_views.py
src/templates/: base.html
src/templates/account/: account_inactive.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
